# senseflux

./: .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
senseflux/: __main__.py  sensors.py  util.py  webapp.py
senseflux/schema/: vegehub_schema.json
tests/: test_sensors.py  test_util.py  test_webapp.py
