[tool.poetry]
name = "senseflux"
version = "0.0.1"
description = ""
authors = ["Sumit Khanna <sumit@penguindreams.org>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"
influxdb = "^5.3.0"
python-dateutil = "^2.8.1"
click = "^7.1.2"
waitress = "^1.4.4"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
